...
            child: Text.rich(
              TextSpan(
                text: '계정이 없으신가요?  ',
                style: AppTextStyles.bodyMedium,
                children: [
                  TextSpan(
                    text: '가입하기',
                    style: AppTextStyles.bodyMedium.copyWith(
                      color: AppColors.primary,
                      fontWeight: FontWeight.w700,
                    ),
                  ),
                ],
...
